Reduce slightly the height (avoid vertical scrollbar)

--- a/src/css/gram.css
+++ b/src/css/gram.css
@@ -1,6 +1,7 @@
 .gram {
   width: 100%;
-  height: 580px;
+  /* 12px padding top + 12px padding bottom */
+  height: calc(600px - 24px);
   background: var(--colour-grey-100);
   border-radius: 0.5rem;
 }
